2010-09-01  Werner Koch  <wk@g10code.com>

	* assuan.h.in (ASSUAN_NO_LOGGING): New.
	* assuan-defs.h (struct assuan_context_s): Add FLAGS.NO_LOGGING.
	* context.c (assuan_set_flag, assuan_get_flag): Support new flag.
	* assuan-logging.c (_assuan_log_control_channel): Implement new flag.

2010-08-11  Werner Koch  <wk@g10code.com>

	* assuan.h.in (ASSUAN_CONVEY_COMMENTS): New.
	* assuan-defs.h (struct assuan_context_s): Add flags.CONVEY_COMMENTS.
	* context.c (assuan_set_flag, assuan_get_flag): Support this flag.
	(_assuan_read_from_server): Add arg CONVEY_COMMENTS.  Change all
	callers.
	* client.c (assuan_transact): Implement new flags.

2010-08-09  Werner Koch  <wk@g10code.com>

	* assuan-socket-connect.c (assuan_socket_connect): Fix ipv6
	literal IP case.

2010-08-03  Marcus Brinkmann  <marcus@g10code.de>

	* gpgcedev.c (GPGCEDEV_IOCTL_ASSIGN_RVID): New call ASSIGN_RVID.
	(PIPE_FLAG_HALT_MONITOR): New flag.
	(struct pipeimpl_s): New members monitor_proc, monitor_access.
	(pipeimpl_new): Initialize them.
	(assert_pipeimpl): New function.
	(access_opnctx, make_pipe): Use it.
	(make_pipe): If there is a monitor, halt it.
	(monitor, assign_rvid): New functions.
	(GPG_IOControl): Handle GPGCEDEV_IOCTL_ASSIGN_RVID.

	* gpgcedev.c: Use index (between 1 and table size) into
	opnctx_table as public context identifiers, instead using pointers
	into the table directly (which are not stable under table resize).
	(OPNCTX_TO_IDX, OPNCTX_FROM_IDX, OPNCTX_VALID_IDX_P): New macros.

2010-06-28  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (GPG_IOControl) <IOCTL_PSL_NOTIFY>: Unblock threads.

2010-06-11  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-handler.c (std_handler_input,
	std_handler_output) [HAVE_W32CE_SYSTEM]: Finish the pipe.  We must
	do this here, because otherwise assuan_close_input_fd() and
	assuan_close_output_fd() can't work.
	* system-w32ce.c (_assuan_w32ce_finish_pipe): Call SetLastError in
	error case.