@@ -1,3 +1,8 @@
+2010-09-17  Werner Koch  <wk@g10code.com>
+
+	* assuan-socket-connect.c (INADDR_NONE): New replacement.  Fixes
+	bug#1282.
+
 2010-09-01  Werner Koch  <wk@g10code.com>
 
 	* assuan.h.in (ASSUAN_NO_LOGGING): New.
